--- a/clicky-game/package.json
+++ b/clicky-game/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "serve": "^10.0.2"
   },
   "scripts": {
     "predeploy": "npm run build",
